--- a/style.css
+++ b/style.css
@@ -4,25 +4,41 @@
     --primary-color: rgb(0, 0, 0);
 }
 
-*{
+.main, .main>*{
     border: 0px solid red;
 }
 
 body{
+    width: 100vw;
+    height: 100vh;
     font-family: 'Nanum Gothic', sans-serif;
     padding: 0px;
     margin: 0px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.container{
+.row{
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    gap: 32px;
 }
 
 #main-form{
-
+    display: flex;
+    flex-direction: column;
     gap: 32px;
-    width: 400px;
+}
+
+
+
+.main{
+    display: flex;
+    flex-direction: column;
+    /*width: 60vw;*/
+    justify-content: center;
+    align-items: flex-start;
+    margin-left: 10%;
 }
 
 label{
@@ -31,12 +47,17 @@ label{
 }
 
 input{
+    border: none;
     border-bottom: 1px solid var(--primary-color);
     /*border-radius: 4px;*/
-    width: 100%;
+    width: 240px;
     height: 24px;
     margin-top: 16px;
     margin-bottom: 16px;
+}
+
+input:focus{
+    outline: none;
 }
 
 button{
@@ -47,12 +68,16 @@ button{
     color: aliceblue;
 }
 
-.main{
-    margin-left: 10vw;
-}
+
 
 .left-side{
-    width: 40vw;
+    min-width: 40vw;
+    width: auto;
     height: 100vh;
     background-color: black;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
 }
