--- a/style.css
+++ b/style.css
@@ -1,21 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
 
 :root{
-    --primary-color: rgb(0, 0, 0);
+    --primary-color: rgb(244, 241, 252);
+    --accent-color: rgb(121, 110, 160);
+    --background-color: rgb(255,255,255);
+    --warn-color: rgba(208, 73, 212, 0.598);
+}
+
+*{
+    border: 0px solid red;
 }
 
 .main, .main>*{
     border: 0px solid red;
+    
+}
+
+.primary-color{
+    color: var(--primary-color);
 }
 
 body{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     font-family: 'Nanum Gothic', sans-serif;
     padding: 0px;
     margin: 0px;
     display: flex;
     flex-wrap: wrap;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.933)), url(src/assets/images/1200x1200bf-60.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+h2{
+    font-size: 1.1rem;
 }
 
 .row{
@@ -31,53 +50,133 @@ body{
 }
 
 
-
 .main{
     display: flex;
     flex-direction: column;
-    /*width: 60vw;*/
     justify-content: center;
     align-items: flex-start;
-    margin-left: 10%;
+    margin-left: 6%;
+    padding: 4%;
+    background-color: rgba(227, 229, 229, 0.001);
+    backdrop-filter: blur(100px);
 }
 
 label{
     position: absolute;
     opacity: 0.6;
+    color: var(--primary-color);
 }
 
 input{
     border: none;
     border-bottom: 1px solid var(--primary-color);
-    /*border-radius: 4px;*/
     width: 240px;
     height: 24px;
     margin-top: 16px;
     margin-bottom: 16px;
+    background-color: rgba(0, 0, 0, 0);
+    color: var(--primary-color);
+}
+
+
+input:valid {
+    outline: none;
+    border-bottom: 1px solid rgb(74, 206, 74);
+}
+
+input:invalid {
+    outline: none;
+    border-bottom: 1px solid  var(--warn-color);
 }
 
 input:focus{
     outline: none;
+    border-bottom: 1px solid var(--primary-color);
 }
 
 button{
-    background-color: var(--primary-color);
+    font-family: 'Nanum Gothic', sans-serif;
+    background-color: rgba(0, 0, 0, 0);
     width: 180px;
     height: 32px;
-    border-radius: 8px;
-    color: aliceblue;
+    border: solid 1px;
+    border-radius: 4px;
+    color: var(--background-color);
 }
 
-
+button:hover{
+    cursor: pointer;
+    background-color: var(--accent-color);
+}
 
 .left-side{
-    min-width: 40vw;
-    width: auto;
-    height: 100vh;
-    background-color: black;
-    color: #fff;
+    min-width: 40%;
+    width: 40%;
+    height: 100%;
+    color: var(--background-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.933)), url(src/assets/images/1200x1200bf-60.jpg);
+    backdrop-filter: blur(100px);
+    background-repeat: no-repeat;
+    background-size: 300%;
+    background-color: rgba(47, 26, 52, 0.139);
+}
+
+.left-side .banner{
+    max-width: 100%;
+    width: auto;
+    height: auto;
+}
+
+@media screen and (max-width: 1150px){
+    .left-side{
+        width: 100%;
+        height: 20%;
+        color: var(--background-color);
+        background-size: 100%;
+        
+    }
+
+    .left-side .banner{
+        max-width: 10%;
+        height: auto;
+        object-fit: contain;
+    }
+
+    body{
+        width: 100%;
+        height: auto;
+        font-family: 'Nanum Gothic', sans-serif;
+        padding: 0px;
+        margin: 0px;
+        justify-content: center;
+        display: flex;
+        background-image: linear-gradient(rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.933)), url(src/assets/images/1200x1200bf-60.jpg);
+        background-repeat: no-repeat;
+        background-size: 200%;
+    }
+
+    .main{
+        margin: 0px;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        align-items: flex-start;
+        background-color: rgba(218, 121, 250, 0.044);
+        /* background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.933)), url(src/assets/images/1200x1200bf-60.jpg), ; */
+        backdrop-filter: blur(100px);
+    }
+
+    .darken-background{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.575);
+    }
 }
